k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: work-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: work-app
  template:
    metadata:
      labels:
        app: work-app
    spec:
      imagePullSecrets:
        - name: registry-cred
      containers:
        - name: work-app
          # Тег :latest или конкретный будет меняться через Jenkins
          image: registry.cicd-task.svc.cluster.local:443/work-app:34 
          imagePullPolicy: IfNotPresent
          ports:                      
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /work/status
              port: 8080
            initialDelaySeconds: 15 # для прогрева JVM
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /work/status
              port: 8080
            initialDelaySeconds: 20 # для прогрева JVM
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: work-app
  labels:
    app: work-app
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: work-app
  type: ClusterIP
