k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: work-app-ingress
spec:
  rules:
  - host: work.127.0.0.1.nip.io # добавляет заголовок
    http:
      paths:
      - path: / # любые запросы перенаправляем дальше
        pathType: Prefix
        backend:
          service:
            name: work-app
            port:
              number: 80 # порт на котором сервис ждет запросов внутри кластера
